[gd_scene load_steps=76 format=3 uid="uid://tp42ctnbye3c"]

[ext_resource type="Script" path="res://Scripts/Boss/boss.gd" id="1_ouu1t"]
[ext_resource type="PackedScene" uid="uid://foxbh42w4vyu" path="res://Scenes/Boss/boss_minion.tscn" id="2_e7we8"]
[ext_resource type="PackedScene" uid="uid://b6nuas2kmhy4f" path="res://Scenes/Boss/projectile.tscn" id="3_r137f"]
[ext_resource type="Texture2D" uid="uid://b20nx1mjurivb" path="res://allart/BossArt/Samurai_Archer/Attack_2.png" id="4_65y6r"]
[ext_resource type="Texture2D" uid="uid://m478fiib2hgm" path="res://allart/BossArt/Samurai_Archer/Attack_3.png" id="5_1me8y"]
[ext_resource type="Texture2D" uid="uid://dydcl07arp0xp" path="res://allart/BossArt/Samurai_Archer/Idle.png" id="5_g53i8"]
[ext_resource type="Texture2D" uid="uid://d3nq1p0l7mvg6" path="res://allart/BossArt/Samurai_Archer/Dead.png" id="6_ssylh"]
[ext_resource type="Texture2D" uid="uid://rted68ncrigc" path="res://allart/BossArt/Samurai_Archer/Attack_1.png" id="6_subhq"]
[ext_resource type="Texture2D" uid="uid://cyuxbove3pqgg" path="res://allart/BossArt/Samurai_Archer/Shot.png" id="7_eakln"]
[ext_resource type="Texture2D" uid="uid://brmodgbtr0wh6" path="res://allart/BossArt/Samurai_Archer/Run.png" id="7_peyew"]
[ext_resource type="Texture2D" uid="uid://bcsvoja2ocpmd" path="res://allart/BossArt/Samurai_Archer/Walk.png" id="8_0rr67"]
[ext_resource type="PackedScene" uid="uid://bgkgl3t2x1mv2" path="res://Scripts/Boss/health_bar.tscn" id="12_aenwi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_te184"]
atlas = ExtResource("4_65y6r")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4c7m7"]
atlas = ExtResource("4_65y6r")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_83acf"]
atlas = ExtResource("4_65y6r")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5et1"]
atlas = ExtResource("4_65y6r")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7j6jb"]
atlas = ExtResource("4_65y6r")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbmvt"]
atlas = ExtResource("5_1me8y")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_loncu"]
atlas = ExtResource("5_1me8y")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nq65j"]
atlas = ExtResource("5_1me8y")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mh6u4"]
atlas = ExtResource("5_1me8y")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqklw"]
atlas = ExtResource("5_1me8y")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4laax"]
atlas = ExtResource("5_1me8y")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hnwyj"]
atlas = ExtResource("6_ssylh")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_66fdr"]
atlas = ExtResource("6_ssylh")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5rxx"]
atlas = ExtResource("6_ssylh")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ik8p5"]
atlas = ExtResource("6_ssylh")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8thou"]
atlas = ExtResource("6_ssylh")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ni8f"]
atlas = ExtResource("5_g53i8")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_unx7s"]
atlas = ExtResource("5_g53i8")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_evn6l"]
atlas = ExtResource("5_g53i8")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gu3m"]
atlas = ExtResource("5_g53i8")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjsf8"]
atlas = ExtResource("5_g53i8")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8ce1"]
atlas = ExtResource("5_g53i8")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5an8"]
atlas = ExtResource("5_g53i8")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhvt0"]
atlas = ExtResource("5_g53i8")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_561eq"]
atlas = ExtResource("5_g53i8")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_241eb"]
atlas = ExtResource("6_subhq")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xoxdi"]
atlas = ExtResource("6_subhq")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6gqr"]
atlas = ExtResource("6_subhq")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6hfb"]
atlas = ExtResource("6_subhq")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdm6a"]
atlas = ExtResource("6_subhq")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_46rwl"]
atlas = ExtResource("7_peyew")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rf34"]
atlas = ExtResource("7_peyew")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4p1b1"]
atlas = ExtResource("7_peyew")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nrj7x"]
atlas = ExtResource("7_peyew")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1j4ll"]
atlas = ExtResource("7_peyew")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbn1k"]
atlas = ExtResource("7_peyew")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7051"]
atlas = ExtResource("7_peyew")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yqace"]
atlas = ExtResource("7_peyew")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_skjbo"]
atlas = ExtResource("7_eakln")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3tdu"]
atlas = ExtResource("7_eakln")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4rnwl"]
atlas = ExtResource("7_eakln")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6yrs"]
atlas = ExtResource("7_eakln")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xf02i"]
atlas = ExtResource("7_eakln")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1kny"]
atlas = ExtResource("7_eakln")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4kau"]
atlas = ExtResource("7_eakln")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_snx2b"]
atlas = ExtResource("7_eakln")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ro8n0"]
atlas = ExtResource("7_eakln")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_17sjj"]
atlas = ExtResource("7_eakln")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8jhk"]
atlas = ExtResource("7_eakln")
region = Rect2(1280, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ho3c6"]
atlas = ExtResource("7_eakln")
region = Rect2(1408, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uvwh2"]
atlas = ExtResource("7_eakln")
region = Rect2(1536, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_063vm"]
atlas = ExtResource("7_eakln")
region = Rect2(1664, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ocfwi"]
atlas = ExtResource("8_0rr67")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_niv4o"]
atlas = ExtResource("8_0rr67")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_meg32"]
atlas = ExtResource("8_0rr67")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2g5ex"]
atlas = ExtResource("8_0rr67")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldgi3"]
atlas = ExtResource("8_0rr67")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rc2l0"]
atlas = ExtResource("8_0rr67")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvo2p"]
atlas = ExtResource("8_0rr67")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3n0xp"]
atlas = ExtResource("8_0rr67")
region = Rect2(896, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_3kuft"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_te184")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4c7m7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83acf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5et1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7j6jb")
}],
"loop": true,
"name": &"aoe_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbmvt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_loncu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nq65j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mh6u4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqklw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4laax")
}],
"loop": true,
"name": &"dash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnwyj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_66fdr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5rxx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ik8p5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8thou")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ni8f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_unx7s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evn6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gu3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjsf8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8ce1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5an8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhvt0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_561eq")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_241eb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xoxdi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6gqr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6hfb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bdm6a")
}],
"loop": true,
"name": &"melee",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_46rwl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rf34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4p1b1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nrj7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1j4ll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbn1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7051")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqace")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_skjbo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3tdu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4rnwl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6yrs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xf02i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1kny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4kau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_snx2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ro8n0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_17sjj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8jhk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ho3c6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvwh2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_063vm")
}],
"loop": true,
"name": &"shoot",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ocfwi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_niv4o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_meg32")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2g5ex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldgi3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rc2l0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvo2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3n0xp")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_mekdr"]
radius = 1330.56

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_l0p1m"]
radius = 30.0
height = 125.714

[node name="boss" type="CharacterBody2D" groups=["enemy"]]
scale = Vector2(0.7, 0.7)
collision_layer = 2
collision_mask = 3
script = ExtResource("1_ouu1t")
speed = 100
minion_scene = ExtResource("2_e7we8")
projectile = ExtResource("3_r137f")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.875, 1.875)
sprite_frames = SubResource("SpriteFrames_3kuft")
animation = &"death"
offset = Vector2(0, -20)

[node name="Detection_area" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection_area"]
shape = SubResource("CircleShape2D_mekdr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-11.4286, 17.1429)
shape = SubResource("CapsuleShape2D_l0p1m")

[node name="Minion_Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Ranged_Attack" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="HealthBar" parent="." instance=ExtResource("12_aenwi")]
offset_left = -39.0
offset_top = 90.0
offset_right = 39.0
offset_bottom = 107.0

[connection signal="body_entered" from="Detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="Detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="Minion_Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Ranged_Attack" to="." method="_on_ranged_attack_timeout"]
